fixed issue with app text not showing up.had wrong pathname

--- a/app/style.css
+++ b/app/style.css
@@ -1,16 +1,7 @@
 
 @import url(https://fonts.googleapis.com/css?family=Orbitron:700);
-*{
+.container{
     font-family: 'Orbitron', sans-serif;
-    background: #113A47;
+    background: #ffaabb;
     color: #000;
 }
-/* .timer {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 75px;
-    color: #000;
-    text-shadow: 0 0 2px #rgba(0, 0, 0, 0.5);, 0 0 6px #000, 0 0 10px #000, 0 0 15px #228DFF, 0 0 25px #228DFF, 0 0 30px #228DFF, 0 0 40px #228DFF, 0 0 50px #228DFF;
-} */
